<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Party Soundlights</string>
    <!-- Экран загрузки -->
    <string name="loading">Loading…</string>
    <!-- Экран цветомузыки -->
    <string name="select_mode_boss">PARTY\nBOSS</string>
    <string name="select_mode_guest">PARTY\nGUEST</string>
    <string name="wifi_disabled_message">WiFi is disabled now. Please turn it on!</string>
    <string name="wait_for_music">Let\'s play some music</string>
    <string name="wait_for_boss">Waiting for a boss…</string>
    <!-- Новости -->
    <string name="news_title">New on %s</string>
    <string name="news_1.1"></string>
    <!-- Диалог для оценивания -->
    <string name="rate_message">Do you like this app? Would you rate it on the store? Author will be pleased.</string>
    <string name="rate_message_yes">Yes…</string>
    <string name="rate_message_no">No</string>
    <string name="rate_message_later">Later</string>
    <!-- Настройки -->
    <string name="settings_flashlight">Flashlight</string>
    <string name="settings_flashlight_use">Use flashlight</string>
    <string name="settings_flashlight_bass">On bass</string>
    <string name="settings_flashlight_middle">On middle</string>
    <string name="settings_flashlight_high">On high</string>
</resources>
